[package]
name = "maildir-pack"
description = "Pack maildir into archive files"
version = "0.1.3"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "email"]
keywords = ["email", "maildir"]
repository = "https://github.com/upsuper/maildir-pack"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.13"
chrono = "0.4.2"
clap = "2.29.0"
combine = "4.0.1"
indicatif = "0.14.0"
rayon = "1.0.0"
sha2 = "0.8.0"
tar = "0.4.14"
xz2 = "0.1.4"

[dev-dependencies]
assert_cmd = "1.0.0"
lazy_static = "1.0.0"
leak = "0.1.2"
tempfile = "3.1.0"
