[package]
name = "maildir-pack"
description = "Pack mails from a maildir into archives"
version = "0.1.3"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "email"]
keywords = ["email", "maildir"]
repository = "https://github.com/upsuper/maildir-pack"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.13"
chrono = "0.4.2"
clap = { version = "3.1.18", features = ["derive"] }
combine = "4.0.1"
indicatif = "0.16.2"
rayon = "1.0.0"
sha2 = "0.10.2"
tar = "0.4.16"
xz2 = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0.4"
leak = "0.1.2"
once_cell = "1"
tempfile = "3.1.0"
